--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,7 @@ title: PTHS Computer Club
 description: "The official site of the Peters Township High School Computer Club"
 
 # Build settings
-markdown: kramdown
+markdown: redcarpet
+redcarpet:
+    extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 permalink: "/post/:title"
